--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <h style="color: red;font-size: x-large; font-weight: 400;">Send us an email !!</h> <br> <br>
+        <h style="color: red;font-size: x-large; font-weight: 400;">Write us an email !!</h> <br> <br>
 
     </head>
     <hr> <br>
